<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="295dp"
    android:layout_height="wrap_content"
    style="@style/CardView"
    android:foregroundGravity="center_horizontal"
    android:paddingHorizontal="40dp"
    android:layout_gravity="center_horizontal"
    android:backgroundTint="@color/colorWhite"
    app:cardCornerRadius="25dp"
    app:cardPreventCornerOverlap="true"
    app:cardElevation="5dp"
    app:cardBackgroundColor="@color/colorWhite"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">




    <ImageView
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:paddingVertical="20dp"
        android:layout_marginHorizontal="18dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:src="@drawable/password"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorErr"
            android:fontFamily="@font/poppins_semi"
            android:layout_marginHorizontal="18dp"
            android:textAlignment="center"
            android:paddingVertical="8dp"
            android:textSize="20sp"
            android:text="@string/enter_password"/>


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/btn_password_background"
            android:hint="@string/password"
            android:paddingHorizontal="12dp"
            android:singleLine="true"
            android:layout_marginHorizontal="18dp"
            android:textColor="#4676B0"
            android:textColorHint="#4676B0"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:layout_gravity="start"
            android:layout_marginHorizontal="22dp"
            android:textColor="@color/colorErr"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:textSize="10sp"
            android:visibility="invisible"
            android:text="@string/password_is_required_to_proceed"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:padding="10dp">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"

            android:background="@drawable/btn_rounded"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/continue_string"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

    </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>

