<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/CardView"
    android:foregroundGravity="center_horizontal"
    android:paddingHorizontal="40dp"
    android:layout_gravity="center_horizontal"
    android:backgroundTint="@color/colorWhite"
    app:cardCornerRadius="25dp"
    android:layout_marginHorizontal="40dp"
    app:cardPreventCornerOverlap="true"
    app:cardElevation="5dp"
    app:cardBackgroundColor="@color/colorWhite"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#BB6C6C"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginHorizontal="25dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/verification_failed"/>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#4676B0"
        android:fontFamily="@font/poppins"
        android:layout_marginHorizontal="25dp"
        android:gravity="center"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/btn_confirm"
            android:fontFamily="@font/poppins"
            android:textAlignment="center"
            android:layout_marginRight="30dp"
            android:text="@string/no"
            android:paddingTop="4dp"
            android:textSize="16sp"
            android:textColor="#7B95B9" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:paddingHorizontal="8dp"
            android:paddingTop="4dp"
            android:background="@drawable/btn_border"
            android:text="@string/retry"
            android:fontFamily="@font/poppins"
            android:textSize="16sp"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>

