<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".sdk.AccessKeyActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/sensecryptlogin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="0.02" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:src="@drawable/sensecrypt_head" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingHorizontal="38dp"
                    android:paddingTop="30dp"
                    android:paddingBottom="40dp"
                    android:text="@string/access_key_screen_title"
                    android:textAlignment="center"
                    android:textColor="#fff" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1.8"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="24dp"
                    app:endIconDrawable="@drawable/icon_key2"
                    app:endIconMode="custom"
                    app:endIconTint="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAccessKey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_background"
                        android:hint="@string/access_key_lower_cap"
                        android:importantForAutofill="no"
                        android:singleLine="true"
                        android:textColor="#fff"
                        android:textColorHint="#fff" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="24dp"
                    android:paddingVertical="8dp"
                    android:text="@string/access_key_is_required"
                    android:textColor="@color/colorError"
                    android:visibility="gone" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnContinue"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/btn_rounded"
                    android:text="@string/continue_string"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>