<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#000"
    android:layout_height="match_parent"
    android:id="@+id/llPersonDetail"
    tools:context="ai.seventhsense.evisauser.PersonDetailActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_marginTop="25dp"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginHorizontal="16dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/btnSmartScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="16dp"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="18dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#A34646"
                android:paddingHorizontal="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:paddingHorizontal="10dp"
                    android:fontFamily="@font/poppins"
                    android:textAlignment="center"
                    android:layout_marginVertical="10dp"
                    android:text="@string/senseprint_verifier"
                    android:textColor="#fff"
                    />
            </LinearLayout>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingHorizontal="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/profile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/model"
                        />

                    <LinearLayout
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/id_no"
                            android:fontFamily="@font/poppins"
                            android:textSize="14sp"
                            android:textColor="#80000000"/>
                        <TextView
                            android:id="@+id/tvRecordId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/record_id_sample"
                            android:fontFamily="@font/poppins"
                            android:textSize="16sp"
                            android:textColor="#000"/>
                        <TextView
                            android:id="@+id/tvTitle"
                            android:layout_marginTop="12dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:fontFamily="@font/poppins"
                            android:textSize="14sp"
                            android:textColor="#80000000"/>
                        <TextView
                            android:id="@+id/tvMessage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:layout_marginBottom="8dp"
                            android:textSize="16sp"
                            android:textColor="#000"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:visibility="gone"/>
                        <LinearLayout
                            android:id="@+id/layoutCard"
                            android:layout_width="match_parent"
                            android:visibility="gone"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_marginBottom="30dp"
                            android:layout_height="wrap_content">
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/seeMore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginVertical="12dp"
                            android:text="@string/view_more"
                            android:textAllCaps="false"
                            android:layout_gravity="left"
                            android:background="@color/colorTransparent"
                            android:minHeight="0dp"
                            android:drawableRight="@drawable/baseline_keyboard_arrow_down_black"
                            android:textSize="12sp"
                            android:drawablePadding="0dp"
                            android:textColor="#606060"/>
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/seeLess"
                            android:layout_alignParentBottom="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="25dp"
                            android:text="@string/view_less"
                            android:visibility="gone"
                            android:textAllCaps="false"
                            android:layout_gravity="left"
                            android:background="@color/colorTransparent"
                            android:minHeight="0dp"
                            android:drawableRight="@drawable/baseline_keyboard_arrow_up_24"
                            android:textSize="12sp"
                            android:fontFamily="@font/poppins"
                            android:drawablePadding="0dp"
                            android:textColor="#000"/>
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
